[tool.poetry]
name = "3en1"
version = "0.1.0"
description = "API REST CRUD en Python"
authors = ["Jose Vidal <xtrate@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2"
firebase = "^3.0"
firebase_admin = "^2.18"
python_jwt = "^3.2"
gcloud = "^0.18.3"
sseclient = "^0.0.24"
pycrypto = "^2.6"
requests-toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
